--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ button {
     background-color: rgb(250, 249, 244);
     color: rgb(96, 74, 50);
     font: bolder;
-    width: auto;
+    width: 900px;
     border: 10px solid rgb(142, 154, 130);
     padding: 25px;
     margin: 20px;
@@ -178,7 +178,7 @@ button {
     background-color: rgb(250, 249, 244);
     color: rgb(96, 74, 50);
     font: bolder;
-    width: auto;
+    width: 900px;
     border: 10px solid rgb(142, 154, 130);
     padding: 25px;
     margin: 20px;
